# ai-usage-widget

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PLAN.md  SECURITY.md  SPECIFICATIONS.md  index.html  package-lock.json  package.json  tmp-claude-debug.mjs  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: claudePty.js  cliFailure.js  cliFailure.test.js  codexPty.js  config.js  detector.js  executor.js  geminiEnv.js  geminiPty.js  geminiPty.test.js  index.js  model.js  parser.js  parser.test.js  platform.js  platform.test.js  providerState.js  providerState.test.js  ptyCleanup.js  ptySupport.js  runtimeErrors.js
backend/adapters/: claude.js  codex.js  gemini.js
docs/: index.html  provider-state-machine-report.md  styles.css
scripts/: prepare-tauri-resources.mjs  render-icons.mjs  render-transparent-icons.swift  run-tauri.mjs  tauri-preflight.mjs
src/: i18n.ts  main.ts  renderer.ts  scheduler.ts  styles.css  tauri.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
