[package]
name = "ai-usage-widget"
version = "0.1.16"
description = "Floating desktop widget for AI coding CLI usage"
authors = ["Elisardo González Agulla"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
libc = "0.2"
